--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
-  "proxy":"http://localhost:5001",
+  "proxy": "http://localhost:5001",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
@@ -12,6 +12,7 @@
     "bootstrap": "^4.6.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
