--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build":"cd client && npm run build",
+    "install-clint":"cd client && npm install",
+    "heroku-postbuild":"npm run install-clint && npm run build",
     "start": "nodemon app.js"
   },
   "author": "",
