--- a/server/package.json
+++ b/server/package.json
@@ -2,11 +2,15 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
+  "engines": {
+    "npm": "6.x"
+  },
+  
   "scripts": {
-    "build":"cd client && npm run build",
-    "install-clint":"cd client && npm install",
-    "heroku-postbuild":"npm run install-clint && npm run build",
+    "build": "cd client && npm run build",
+    "install-clint": "cd client && npm install",
+    "heroku-postbuild": "npm run install-clint && npm run build",
     "start": "nodemon app.js"
   },
   "author": "",
