--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,7 @@
   },
   
   "scripts": {
-    "build": "cd client && npm run build",
-    "install-clint": "cd client && npm install",
-    "heroku-postbuild": "npm run install-clint && npm run build",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
     "start": "nodemon app.js"
   },
   "author": "",
