--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "npm": "6.x"
+    "node": "16.x"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
